[gd_scene load_steps=10 format=3 uid="uid://btu0r57cjjf45"]

[ext_resource type="Texture2D" uid="uid://cp6po156talxb" path="res://assets/sprites/pause menu.png" id="1_67p6v"]
[ext_resource type="Script" uid="uid://dnpnalo6nxy31" path="res://menus/gameover menu/game_over_screen.gd" id="1_p8yhe"]
[ext_resource type="FontFile" uid="uid://bcct3elykmji6" path="res://assets/fonts/Minecraft.ttf" id="3_3xsbi"]
[ext_resource type="AudioStream" uid="uid://41285ycs8l4t" path="res://assets/sounds/retro-select-236670.mp3" id="4_3xsbi"]

[sub_resource type="LabelSettings" id="LabelSettings_p8yhe"]
font = ExtResource("3_3xsbi")
font_size = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fl534"]

[sub_resource type="Animation" id="Animation_3xsbi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_p8yhe"]
resource_name = "pop-in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3xsbi"]
_data = {
&"RESET": SubResource("Animation_3xsbi"),
&"pop-in": SubResource("Animation_p8yhe")
}

[node name="gameOverScreen" type="CanvasLayer"]
script = ExtResource("1_p8yhe")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 120.0
offset_top = 15.0
offset_right = 320.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_67p6v")
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 160.0
offset_top = 60.0
offset_right = 280.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 70
alignment = 1

[node name="HBoxContainer2" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_3xsbi")
theme_override_font_sizes/font_size = 20
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_p8yhe")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_p8yhe")
horizontal_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="returnToTitleButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3xsbi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fl534")
text = "Return to Title"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3xsbi")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3xsbi")
